feat: add the mobile layout without styles

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -13,7 +13,61 @@
 
     <title>Frontend Mentor | Testimonial Grid Challenge</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div id="testimonial-1" class="testimonial-item">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+          inventore eveniet porro! Unde.
+        </p>
+      </div>
+
+      <div id="testimonial-2" class="testimonial-item">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+          inventore eveniet porro! Unde.
+        </p>
+      </div>
+
+      <div id="testimonial-3" class="testimonial-item">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+          inventore eveniet porro! Unde.
+        </p>
+      </div>
+
+      <div id="testimonial-4" class="testimonial-item">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+          inventore eveniet porro! Unde.
+        </p>
+      </div>
+
+      <div id="testimonial-5" class="testimonial-item">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+          inventore eveniet porro! Unde.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
