feat: add desktop layout without styles

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -23,41 +23,46 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div id="testimonial-1" class="testimonial-item">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
-          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
-          inventore eveniet porro! Unde.
-        </p>
-      </div>
+    <div class="main-container">
+      <div class="left-container">
+        <div class="top">
+          <div id="testimonial-1" class="testimonial-item">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+              tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+              inventore eveniet porro! Unde.
+            </p>
+          </div>
 
-      <div id="testimonial-2" class="testimonial-item">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
-          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
-          inventore eveniet porro! Unde.
-        </p>
-      </div>
+          <div id="testimonial-2" class="testimonial-item">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+              tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+              inventore eveniet porro! Unde.
+            </p>
+          </div>
+        </div>
+        <div class="bottom">
+          <div id="testimonial-3" class="testimonial-item">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+              tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+              inventore eveniet porro! Unde.
+            </p>
+          </div>
 
-      <div id="testimonial-3" class="testimonial-item">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
-          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
-          inventore eveniet porro! Unde.
-        </p>
-      </div>
-
-      <div id="testimonial-4" class="testimonial-item">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          exercitationem doloribus deserunt aliquam molestias? Nobis odit,
-          tenetur tempore soluta ex fugit dolorum autem alias harum saepe
-          inventore eveniet porro! Unde.
-        </p>
+          <div id="testimonial-4" class="testimonial-item">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              exercitationem doloribus deserunt aliquam molestias? Nobis odit,
+              tenetur tempore soluta ex fugit dolorum autem alias harum saepe
+              inventore eveniet porro! Unde.
+            </p>
+          </div>
+        </div>
       </div>
 
       <div id="testimonial-5" class="testimonial-item">
