--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,41 +1,33 @@
 /* COLORS */
 
-/* 
+/* Main Colors */
+:root {
+  --color-primary: #7541c8;
+  --color-secondary: #48556a;
+  --color-dark: #19212e;
+  --color-white: #ffffff;
 
-- Main Colors:
+  /* Neutral Colors */
+  --color-neutral-light: #cfcfcf;
+  --color-neutral-background: #ecf2f8;
+}
 
-  color: #7541c8;
-  color: #48556a;
-  color: #19212e;
-  color: #ffffff;
-
-- Neutral Colors:
-
-  color: #cfcfcf;
-  color: #ecf2f8;
-
-*/
-
-/*  */
-
+/* Reset */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-/*  */
-
+/* Base Styles */
 body {
   font-family: "Barlow Semi Condensed", sans-serif;
-  background-color: #ecf2f8;
+  background-color: var(--color-neutral-background);
 }
 
 .main-container {
   padding: 2% 5%;
 }
-
-/*  */
 
 .testimonial-item {
   margin-bottom: 20px;
@@ -43,30 +35,23 @@ body {
 }
 
 #testimonial-1 {
-  background-color: #7541c8;
+  background-color: var(--color-primary);
 }
 
 #testimonial-2 {
-  background-color: #48556a;
+  background-color: var(--color-secondary);
 }
 
-#testimonial-3 {
-  margin-bottom: 0;
-  background-color: #fff;
+#testimonial-3,
+#testimonial-5 {
+  background-color: var(--color-white);
 }
 
 #testimonial-4 {
-  margin-bottom: 0;
-  background-color: #19212e;
-}
-
-#testimonial-5 {
-  margin-bottom: 0;
-  background-color: #fff;
+  background-color: var(--color-dark);
 }
 
 /* Desktop */
-
 @media (min-width: 576px) {
   .main-container {
     max-width: 1440px;
@@ -96,9 +81,8 @@ body {
 
   #testimonial-5 {
     flex-basis: 20%;
+    margin-bottom: 0;
   }
-
-  /*  */
 
   #testimonial-1 {
     flex-basis: 65%;
@@ -110,9 +94,11 @@ body {
 
   #testimonial-3 {
     flex-basis: 35%;
+    margin-bottom: 0;
   }
 
   #testimonial-4 {
     flex-basis: 65%;
+    margin-bottom: 0;
   }
 }
